--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
     "token": "Nzk4MDIyODExNzE2NjgxNzY5.X_u-qA.P7627063aXQQCGhGGDHQWIEaAfE",
-    "prefix": "-",
+    "prefix": ".",
     "ownerid": "441912852710948864"
   }
