--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "enmap": "^5.8.2",
     "fs": "^0.0.1-security"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "prettier": "2.2.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
