--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Simple discord bot created with create-discord-app",
   "main": "index.js",
   "scripts": {
-    "start": "node .",
-    "dev": "nodemon ."
+    "start": "nodemon .",
+    "node": "node ."
   },
   "author": "",
   "license": "MIT",
