--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "discord-bot",
+  "name": "fbivee",
   "version": "1.0.0",
   "description": "Simple discord bot created with create-discord-app",
   "main": "index.js",
