--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ DBUN=mongodb cluster username here
 DBPW=mongodb cluster password here
 DBSURL=mongodb uri short url here (find it here: https://ev.is-inside.me/HMlf4IvD.png)
 DBNAME=the name you want the db to be
+PREFIX=bot prefix here
