--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "license": "CC-BY-NC-4.0",
   "devDependencies": {},
   "dependencies": {
-    "discord.js": "^12.4.1",
+    "@discordjs/opus": "^0.4.0",
+    "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
     "nodemon": "^2.0.7",
     "quickmongo": "^3.0.0"
