--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "nodemon .",
     "node": "node ."
   },
-  "author": "",
+  "author": "LakeTheEevee",
   "license": "CC-BY-NC-4.0",
   "devDependencies": {},
   "dependencies": {
