--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
     "nodemon": "^2.0.7",
-    "quickmongo": "^3.0.0"
+    "quickmongo": "^3.0.0",
+    "sodium": "^3.0.2"
   }
 }
