--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,2 @@
 TOKEN=bot token here
-DBUN=mongodb cluster username here
-DBPW=mongodb cluster password here
-DBSURL=mongodb uri short url here (find it here: https://ev.is-inside.me/HMlf4IvD.png)
-DBNAME=the name you want the db to be
-PREFIX=bot prefix here
+DBURL=your mongodb url here
