--- a/config.js.example
+++ b/config.js.example
@@ -1,6 +1,6 @@
 module.exports = {
     TOKEN: process.env.TOKEN,
-    PREFIX: process.env.PREFIX,
+    PREFIX: "your prefix here",
     OWNERID: "your id here",
-    DBURL: `mongodb+srv://${process.env.DBUN}:${process.env.DBPW}@${process.env.DBSURL}/${process.env.DBNAME}?retryWrites=true&w=majority&useNewUrlParser=true&useUnifiedTopology=true`,
+    DBURL: process.env.DBURL,
 };
